Template & Less adjustments to fix table bleeds

--- a/traffic_stops/static/less/index.less
+++ b/traffic_stops/static/less/index.less
@@ -78,6 +78,10 @@ h1, h2, h3, h4, h5 {
   }
 }
 
+table {
+  word-wrap: break-word;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 
